[package]
name = "bloggy"
version = "0.0.1"

[dependencies]
iron = "0.5.1"
handlebars = "0.25.1"
handlebars-iron ="0.23.*"
staticfile = "0.4.0"
router = "0.5.1"
mount = "0.3.0"
serde_derive = "0.9.9"
markdown = "0.2.0"
time = "0.1"
toml = "0.3"
serde = "0.9.1"

[features]
watch = ["handlebars-iron/watch"]
default = ["handlebars-iron/serde_type"]
